apps/pihole/overlays/prod/dashboard-prefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-prefix
  namespace: pihole

spec:
  addPrefix:
    prefix: /admin
