apps/pihole/overlays/prod/ingress-route-ext.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: pihole-ingress-ext
  namespace: pihole
spec:
  entryPoints:
    - websecure-ext
  routes:
    - match: Host(`pihole.sobrinho.pt`)
      kind: Rule
      middlewares:
        - name: middleware-auth-forward
          namespace: traefik
        - name: dashboard-redirect
      services:
        - name: pihole-web
          port: http
